gnome-languages: Use g_auto* macros where applicable

https://bugzilla.gnome.org/show_bug.cgi?id=761776